--- a/src/main/resources/ku/cs/customercontroller.fxml
+++ b/src/main/resources/ku/cs/customercontroller.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #333333;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.controllers.customer.CustomerController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #333333;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.controllers.customer.CustomerMenuController">
    <children>
       <Label layoutX="276.0" layoutY="56.0" text="Customer Controller" textFill="WHITE">
          <font>
