--- a/src/main/resources/ku/cs/adminsetting.fxml
+++ b/src/main/resources/ku/cs/adminsetting.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #333333;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.controllers.admin.AdminSetting">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #333333;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.controllers.admin.AdminSettingController">
    <children>
       <TextField fx:id="userField" layoutX="319.0" layoutY="156.0" prefHeight="46.0" prefWidth="321.0" promptText="username">
          <font>
