--- a/src/main/resources/ku/cs/creator.fxml
+++ b/src/main/resources/ku/cs/creator.fxml
@@ -42,7 +42,7 @@
             <Font name="System Bold Italic" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="246.0" layoutY="453.0" prefHeight="61.0" prefWidth="388.0" text="Phakaporn Srisukha" textFill="WHITE">
+      <Label layoutX="246.0" layoutY="453.0" prefHeight="61.0" prefWidth="388.0" text="Name : Phakaporn Srisukha(Noon)" textFill="WHITE">
          <font>
             <Font name="System Bold Italic" size="20.0" />
          </font>
