--- a/src/main/resources/ku/cs/customerlogin.fxml
+++ b/src/main/resources/ku/cs/customerlogin.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #333333;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.controllers.customer.CustomerLogin">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #333333;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.controllers.customer.CustomerLoginController">
    <children>
       <Label layoutX="240.0" layoutY="58.0" text="Customer Login" textFill="WHITE">
          <font>
